--- a/assets/base.css
+++ b/assets/base.css
@@ -1996,7 +1996,7 @@ details[open] > .search-modal {
   animation: animateMenuOpen var(--duration-default) ease;
 }
 
-.modal-overlay:empty {
+details[open] .modal-overlay {
   display: block;
 }
 
